test/spec_vectors/global/fail/module_46.wat
(module (global $x (mut i32) (i32.const 0)) (func $type-global.set-value-empty-in-select (select (global.set $x) (i32.const 1) (i32.const 2))))